tests/cases/negative/with-type.frtl
x : Float = 1.0
y : Float & Float = 2.0   # idempotence in constant
z : Float & Float = x + y # idempotencen in operation
it = x + y + z